Add new links (#74)
* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "services" page

* Add new link to the "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -155,6 +155,31 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/startupstudia" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Стартап-экосистема</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/nauka_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Наука [НИРС, СНО, аспиранты]</h4>
+                    <span class="card__description">
+                      Отдел сопровождения и развития научной деятельности обучающихся и Студенческого научного общества
+                    </span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-something">
@@ -257,6 +282,18 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/maicyberleague" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Cyber League</h4>
+                    <span class="card__description">Киберспорт</span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
@@ -317,6 +354,17 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Мужская сборная по волейболу</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/alpclbmai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Альпклуб</h4>
                   </div>
                 </a>
               </li>
@@ -550,6 +598,16 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 802</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://www.kaf804.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Кафедра 804</h4>
                   </div>
                 </a>
               </li>
