Update name of the "sport" group in "organizations"

--- a/organizations.html
+++ b/organizations.html
@@ -54,7 +54,7 @@
               <a class="page-menu__link" href="#catalog-community-something">Объединения: разное</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-sport">Объединения: спорт</a>
+              <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-institute-1">Институт №1</a>
@@ -297,7 +297,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
-            <h3 class="catalog-group__title">Объединения: спорт</h3>
+            <h3 class="catalog-group__title">Спортивные</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/sportvmai" target="_blank">
