Update name of the "events" group in "organizations"

--- a/organizations.html
+++ b/organizations.html
@@ -51,7 +51,7 @@
               <a class="page-menu__link" href="#catalog-studying">Учебные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-something">Объединения: разное</a>
+              <a class="page-menu__link" href="#catalog-community-something">Мероприятия и поддержки</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
@@ -183,7 +183,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-something">
-            <h3 class="catalog-group__title">Объединения: разное</h3>
+            <h3 class="catalog-group__title">Мероприятия и поддержки</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://dk-mai.com/" target="_blank">
