--- a/organizations.html
+++ b/organizations.html
@@ -241,6 +241,16 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="https://maiprof.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Профсоюз работников</h4>
+                  </div>
+                </a>
+              </li>  
+              <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/debatemai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
