--- a/organizations.html
+++ b/organizations.html
@@ -54,6 +54,9 @@
               <a class="page-menu__link" href="#catalog-community-something">Мероприятия и поддержки</a>
             </li>
             <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-communication">Коммуникативные</a>
+            </li>
+            <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
             </li>
             <li class="page-menu__item">
@@ -272,6 +275,10 @@
                 </a>
               </li>
             </ul>
+          </article>
+          <article class="catalog-group" id="catalog-communication">
+            <h3 class="catalog-group__title">Коммуникативные</h3>
+            <ul class="catalog-group__list"></ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
             <h3 class="catalog-group__title">Спортивные</h3>
