Move "conversation club" organization to "communication" group

--- a/organizations.html
+++ b/organizations.html
@@ -120,20 +120,6 @@
             <h3 class="catalog-group__title">Учебные</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/conversationclubMAI" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">CONVERSATION CLUB</h4>
-                    <span class="card__description">
-                      Для студентов, которые хотят говорить свободно на английском языке
-                    </span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/exchange_programs_mai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
@@ -278,7 +264,22 @@
           </article>
           <article class="catalog-group" id="catalog-communication">
             <h3 class="catalog-group__title">Коммуникативные</h3>
-            <ul class="catalog-group__list"></ul>
+            <ul class="catalog-group__list">
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/conversationclubMAI" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">CONVERSATION CLUB</h4>
+                    <span class="card__description">
+                      Для студентов, которые хотят говорить свободно на английском языке
+                    </span>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
             <h3 class="catalog-group__title">Спортивные</h3>
