--- a/services.html
+++ b/services.html
@@ -155,6 +155,17 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://oblako.mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Облако</h4>
+                    <span class="card__description">Издание о современных технологиях, которые либо уже, либо вот-вот поменяют мир, а также о людях — профессорах и преподавателях, молодых учёных и инженерах, студентах, которые претворяют идеи в жизнь</span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
         </div>
