--- a/organizations.html
+++ b/organizations.html
@@ -287,6 +287,17 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/mai_business" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Клуб предпринимательства</h4>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
