Add link to main site of MAI as service

--- a/services.html
+++ b/services.html
@@ -50,6 +50,17 @@
             <h3 class="catalog-group__title">Все сервисы</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
+                <a class="card" href="https://mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">МАИ</h4>
+                    <span class="card__description">Основной сайт</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
