Add link to institutes and branches of MAI as service

--- a/services.html
+++ b/services.html
@@ -61,6 +61,17 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="https://institutes.mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Институты и филиалы</h4>
+                    <span class="card__description">Подробные сведения о каждом факультете</span>
+                  </div>
+                </a>
+              </li>              
+              <li class="catalog-group__item">
                 <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
