Add link to "TOPS" service

--- a/services.html
+++ b/services.html
@@ -199,6 +199,18 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/+oPrGhljl08I1MWVi" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">ТОПС</h4>
+                    <span class="card__description">Подработка в МАИ</span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
         </div>
