Update catalog content (#85)
- Rename some groups
- Add new links
- Change locations of some links

* Update name of the "sport" group in "organizations"

* Update name of the "events" group in "organizations"

* Move "chess" organization to "sport" group

* Move "Cyber League" organization to "sport" group

* Move "fire help" organization to "sport" group

* Move "science community" organization to "studying" group

* Move "workers union" organization to "events" group

* Create group "communication" in "organizations"

* Move "conversation club" organization to "communication" group

* Move "top 100" organization to "communication" group

* Move "startup studio" organization to "communication" group

* Delete "workers union" organization in "not-sorted" group

Forgot delete this organization from "not-sorted" group
during moving to "events" group

* Move "aeromai" organization to "studying" group

* Move "oblako" service to "services" page

* Move "MAI STORE" service to "services" page

* Change the order of services

* Delete "not-sorted" group

* Add "business club" organization link

* Move "spkmai" organization to "communication" group

* Move "debat club" organization to "communication" group

* Add link to main site of MAI as service

* Add link to institutes and branches of MAI as service

* Add link to "TOPS" service

--- a/services.html
+++ b/services.html
@@ -50,6 +50,28 @@
             <h3 class="catalog-group__title">Все сервисы</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
+                <a class="card" href="https://mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">МАИ</h4>
+                    <span class="card__description">Основной сайт</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://institutes.mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Институты и филиалы</h4>
+                    <span class="card__description">Подробные сведения о каждом факультете</span>
+                  </div>
+                </a>
+              </li>              
+              <li class="catalog-group__item">
                 <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
@@ -133,6 +155,28 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="https://store.mai.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">MAI STORE</h4>
+                    <span class="card__description">Интернет-магазин</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://mai-exler.ru/" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">МАИ.Экслер.ру</h4>
+                    <span class="card__description">Cтуденческая энциклопедия</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/inetmai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
@@ -145,13 +189,25 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card" href="https://mai-exler.ru/" target="_blank">
+                <a class="card" href="https://oblako.mai.ru" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
-                    <h4 class="card__title">МАИ.Экслер.ру</h4>
-                    <span class="card__description">Cтуденческая энциклопедия</span>
+                    <h4 class="card__title">Облако</h4>
+                    <span class="card__description">Издание о современных технологиях, которые либо уже, либо вот-вот поменяют мир, а также о людях — профессорах и преподавателях, молодых учёных и инженерах, студентах, которые претворяют идеи в жизнь</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/+oPrGhljl08I1MWVi" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">ТОПС</h4>
+                    <span class="card__description">Подработка в МАИ</span>
                   </div>
                 </a>
               </li>
