Update catalog content (#86)
- Rename some groups
- Add new links
- Change locations of some links

* Add new links (#74)

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "services" page

* Add new link to the "organizations" page

* Update name of the "sport" group in "organizations"

* Update name of the "events" group in "organizations"

* Move "chess" organization to "sport" group

* Move "Cyber League" organization to "sport" group

* Move "fire help" organization to "sport" group

* Move "science community" organization to "studying" group

* Move "workers union" organization to "events" group

* Create group "communication" in "organizations"

* Move "conversation club" organization to "communication" group

* Move "top 100" organization to "communication" group

* Move "startup studio" organization to "communication" group

* Delete "workers union" organization in "not-sorted" group

Forgot delete this organization from "not-sorted" group
during moving to "events" group

* Move "aeromai" organization to "studying" group

* Move "oblako" service to "services" page

* Move "MAI STORE" service to "services" page

* Change the order of services

* Delete "not-sorted" group

* Add "business club" organization link

* Move "spkmai" organization to "communication" group

* Move "debat club" organization to "communication" group

* Add link to main site of MAI as service

* Add link to institutes and branches of MAI as service

* Add link to "TOPS" service

--- a/organizations.html
+++ b/organizations.html
@@ -51,10 +51,13 @@
               <a class="page-menu__link" href="#catalog-studying">Учебные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-something">Объединения: разное</a>
+              <a class="page-menu__link" href="#catalog-community-something">Мероприятия и поддержки</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-sport">Объединения: спорт</a>
+              <a class="page-menu__link" href="#catalog-communication">Коммуникативные</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-institute-1">Институт №1</a>
@@ -104,9 +107,6 @@
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-entrance">Поступление</a>
             </li>
-            <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-not-sorted">Несортированное</a>
-            </li>
           </ul>
         </nav>
       </section>
@@ -116,20 +116,6 @@
           <article class="catalog-group" id="catalog-studying">
             <h3 class="catalog-group__title">Учебные</h3>
             <ul class="catalog-group__list">
-              <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/conversationclubMAI" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">CONVERSATION CLUB</h4>
-                    <span class="card__description">
-                      Для студентов, которые хотят говорить свободно на английском языке
-                    </span>
-                  </div>
-                </a>
-              </li>
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/exchange_programs_mai" target="_blank">
                   <div class="card__icon-wrapper">
@@ -145,13 +131,38 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card" href="https://top100mai.tilda.ws" target="_blank">
+                <a class="card card--telegram" href="https://t.me/nauka_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Наука [НИРС, СНО, аспиранты]</h4>
+                    <span class="card__description">
+                      Отдел сопровождения и развития научной деятельности обучающихся и Студенческого научного общества
+                    </span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--vk" href="https://vk.com/sno_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Студенческое научное общество</h4>
+                    <span class="card__description">Объединение студентов, занимающихся развитием, популяризацией науки и вовлечением студентов в научную жизнь института</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://aeromai.ru" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
-                    <h4 class="card__title">Проект "Топ-100"</h4>
-                    <span class="card__description">Площадка для запуска твоего лидерского потенциала</span>
+                    <h4 class="card__title">Аэромобильность</h4>
+                    <span class="card__description">Экосистема беспилотной авиации, где соединяются наука, технологии и образование.</span>
                   </div>
                 </a>
               </li>
@@ -183,7 +194,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-something">
-            <h3 class="catalog-group__title">Объединения: разное</h3>
+            <h3 class="catalog-group__title">Мероприятия и поддержки</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://dk-mai.com/" target="_blank">
@@ -230,13 +241,64 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card" href="https://maichess.ru/" target="_blank">
+                <a class="card" href="https://maiprof.ru" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
-                    <h4 class="card__title">Шахматный клуб</h4>
-                    <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников</span>
+                    <h4 class="card__title">Профсоюз работников</h4>
+                  </div>
+                </a>
+              </li>  
+            </ul>
+          </article>
+          <article class="catalog-group" id="catalog-communication">
+            <h3 class="catalog-group__title">Коммуникативные</h3>
+            <ul class="catalog-group__list">
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/conversationclubMAI" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">CONVERSATION CLUB</h4>
+                    <span class="card__description">
+                      Для студентов, которые хотят говорить свободно на английском языке
+                    </span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://top100mai.tilda.ws" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Проект "Топ-100"</h4>
+                    <span class="card__description">Площадка для запуска твоего лидерского потенциала</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/startupstudia" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Стартап-экосистема</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/mai_business" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Клуб предпринимательства</h4>
                   </div>
                 </a>
               </li>
@@ -248,27 +310,6 @@
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Клуб Дебаты</h4>
                     <span class="card__description">Дискуссионный клуб ораторского искусства</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card card--vk" href="https://vk.com/sno_mai" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Студенческое научное общество</h4>
-                    <span class="card__description">Объединение студентов, занимающихся развитием, популяризацией науки и вовлечением студентов в научную жизнь института</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card card--vk" href="https://vk.com/spso_mai" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Студенческий Пожарно-Спасательный Отряд</h4>
                   </div>
                 </a>
               </li>
@@ -297,7 +338,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-community-sport">
-            <h3 class="catalog-group__title">Объединения: спорт</h3>
+            <h3 class="catalog-group__title">Спортивные</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/sportvmai" target="_blank">
@@ -365,6 +406,39 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Альпклуб</h4>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://maichess.ru/" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Шахматный клуб</h4>
+                    <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/maicyberleague" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Cyber League</h4>
+                    <span class="card__description">Киберспорт</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--vk" href="https://vk.com/spso_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Студенческий Пожарно-Спасательный Отряд</h4>
                   </div>
                 </a>
               </li>
@@ -843,6 +917,18 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/traektoriamai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Траектория взлёта</h4>
+                    <span class="card__description">Образовательная площадка для детей с топовыми направлениями подготовки</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/avia_mai_pc" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
@@ -971,66 +1057,6 @@
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Передовая инженерная школа</h4>
                     <span class="card__description">Меганаправление</span>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </article>
-          <article class="catalog-group" id="catalog-not-sorted">
-            <h3 class="catalog-group__title">Несортированное</h3>
-            <ul class="catalog-group__list">
-              <li class="catalog-group__item">
-                <a class="card" href="https://oblako.mai.ru" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Облако</h4>
-                    <span class="card__description">Издание о современных технологиях, которые либо уже, либо вот-вот поменяют мир, а также о людях — профессорах и преподавателях, молодых учёных и инженерах, студентах, которые претворяют идеи в жизнь</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card" href="https://store.mai.ru" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">MAI STORE</h4>
-                    <span class="card__description">Интернет-магазин</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card" href="https://aeromai.ru" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Аэромобильность</h4>
-                    <span class="card__description">Экосистема беспилотной авиации, где соединяются наука, технологии и образование.</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/traektoriamai" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Траектория взлёта</h4>
-                    <span class="card__description">Образовательная площадка для детей с топовыми направлениями подготовки</span>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card" href="https://maiprof.ru" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Профсоюз работников</h4>
                   </div>
                 </a>
               </li>
